[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hush-ai"
version = "0.1.0"
description = "Hush workflow engine - async workflow orchestration for GenAI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hush Team" }]
keywords = ["workflow", "orchestration", "llm", "genai", "pipeline", "async", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []  # Empty - everything via extras

[project.optional-dependencies]
# ============================================================
# TIERS (pick one as your base)
# ============================================================
core = [
    "hush-core>=0.1.0",
]

standard = [
    "hush-core>=0.1.0",
    "hush-providers>=0.1.0",
]

all = [
    "hush-core>=0.1.0",
    "hush-providers[all-light]>=0.1.0",
    "hush-observability[all]>=0.1.0",
]

full = [
    "hush-core>=0.1.0",
    "hush-providers[all]>=0.1.0",
    "hush-observability[all]>=0.1.0",
]

# ============================================================
# LLM PROVIDERS (can combine: pip install hush-ai[openai,gemini])
# ============================================================
openai = [
    "hush-core>=0.1.0",
    "hush-providers[openai]>=0.1.0",
]

azure = [
    "hush-core>=0.1.0",
    "hush-providers[azure]>=0.1.0",
]

gemini = [
    "hush-core>=0.1.0",
    "hush-providers[gemini]>=0.1.0",
]

# ============================================================
# LOCAL INFERENCE
# ============================================================
onnx = [
    "hush-core>=0.1.0",
    "hush-providers[onnx]>=0.1.0",
]

huggingface = [
    "hush-core>=0.1.0",
    "hush-providers[huggingface]>=0.1.0",
]

# ============================================================
# OBSERVABILITY (can combine: pip install hush-ai[standard,langfuse])
# ============================================================
langfuse = [
    "hush-observability[langfuse]>=0.1.0",
]

otel = [
    "hush-observability[otel]>=0.1.0",
]

# ============================================================
# DEVELOPMENT
# ============================================================
dev = [
    "hush-core>=0.1.0",
    "hush-providers[all-light]>=0.1.0",
    "hush-observability[all]>=0.1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/your-org/hush"
Documentation = "https://github.com/your-org/hush#readme"
Repository = "https://github.com/your-org/hush"

# Pure meta-package - no source code
[tool.setuptools]
packages = []

[tool.uv.sources]
hush-core = { path = "../hush-core", editable = true }
hush-providers = { path = "../hush-providers", editable = true }
hush-observability = { path = "../hush-observability", editable = true }
