[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hush-core"
version = "0.1.0"
description = "Hush workflow engine core - A powerful async workflow orchestration framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Beeflow Team" }
]
keywords = ["workflow", "orchestration", "async", "dag", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Note: These will be available when the other hush packages are created
# Uncomment when packages are available:
# providers = ["hush-providers"]
# storage = ["hush-storage"]
# observability = ["hush-observability"]
# integrations = ["hush-integrations"]
# templates = ["hush-templates"]
# all = [
#     "hush-providers",
#     "hush-storage",
#     "hush-observability",
#     "hush-integrations",
#     "hush-templates",
# ]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/your-org/hush"
Documentation = "https://github.com/your-org/hush#readme"
Repository = "https://github.com/your-org/hush"

[tool.hatch.build.targets.wheel]
packages = ["hush"]

[tool.hatch.build.targets.sdist]
include = [
    "/hush",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
