[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hush-observability"
version = "0.1.0"
description = "Observability and tracing framework for Hush with support for multiple backends"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hush Team" }
]
dependencies = [
    "hush-core",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
langfuse = [
    "langfuse>=2.0.0",
]
phoenix = [
    "arize-phoenix>=4.0.0",
]
opik = [
    "opik>=0.1.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
all = [
    "langfuse>=2.0.0",
    "arize-phoenix>=4.0.0",
    "opik>=0.1.0",
    "langsmith>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hush*"]
namespaces = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
